Projet GL/Projet_GL/src/test/deca/syntax/invalid/chaine_incomplete.res
src/test/deca/syntax/invalid/chaine_incomplete.deca:10:0: token recognition error at: '"chaine pas finie\n'
